[package]
name = "meanshift-rs"
version = "0.2.1"
authors = ["Phillip Wenig <info@pwenig.de>"]
edition = "2018"

[dev-dependencies]
csv = "1.1.6"

[dependencies]
actix = "0.10"
env_logger = "0.8"
futures = "0.3.16"
kdtree = "0.6.0"
log = "0.4"
ndarray = { version = "0.14.0", features = ["rayon"] }
ndarray-stats = "0.4"
num-traits = "0.2.14"
num-integer = "0.1.44"
rayon = "1.5.1"
sorted-vec = "0.5.2"
