[package]
name = "meanshift-rs"
version = "0.8.0"
authors = ["Phillip Wenig <info@pwenig.de>"]
edition = "2018"
repository = "https://github.com/wenig/meanshift-rs"
license = "MIT"
description = "Rust version of the MeanShift clustering algorithm that does not need a predefined number of clusters."

[lib]
name = "meanshift_rs"
crate-type = ["cdylib", "rlib"]

[features]
python = ["pyo3", "numpy"]

[dev-dependencies]
csv = "1.1.6"

[dependencies]
actix = "0.12"
actix-rt = "2.2.0"
env_logger = "0.8"
futures = "0.3.16"
kdtree = "0.6.0"
log = "0.4"
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-stats = "0.5"
num-traits = "0.2.14"
num-integer = "0.1.44"
rayon = "1.5.3"
sorted-vec = "0.5.2"

tokio = "1.10.0"
futures-sink = "0.3.16"
anyhow = "1.0.43"

pyo3 = { version = "0.14.5", features = ["extension-module"], optional = true}
numpy = { version = "0.14.1", optional = true }
