[package]
name = "meanshift-rs"
version = "0.9.2"
authors = ["Phillip Wenig <info@pwenig.de>"]
edition = "2018"
repository = "https://github.com/wenig/meanshift-rs"
license = "MIT"
description = "Rust version of the MeanShift clustering algorithm that does not need a predefined number of clusters."

[lib]
name = "meanshift_rs"
crate-type = ["cdylib", "rlib"]

[features]
python = ["pyo3", "numpy"]

[dev-dependencies]
csv = "1.1.6"

[dependencies]
rand = "0.8.5"
env_logger = "0.8"
kdtree = "0.6.0"
log = "0.4"
ndarray = { version = "0.15", features = ["rayon"] }
num-traits = "0.2.14"
num-integer = "0.1.44"
rayon = "1.5.3"

anyhow = "1.0.43"

pyo3 = { version = "0.17.2", features = ["extension-module"], optional = true}
numpy = { version = "0.17.2", optional = true }
